--- a/MonFreezeDoor.conf
+++ b/MonFreezeDoor.conf
@@ -1,9 +1,9 @@
-[one]
+[smtp]
 uid = mail_x
 host = send.one.com
-port = 465
-ssl = True
-sender = xavier@mayeur.be
+port = 587
+ssl = false
+sender = x@mayeur.be
 
 [Freezer]
 timeout = 60
@@ -13,7 +13,7 @@ dev = False
 [vault]
 vault_url = http://192.168.0.4:5000/api/ID
 
-[smtp]
+[gmail]
 uid = gmail_x
 host = smtp.gmail.com
 port = 587
